# diffdateproject

./: README.md  pyproject.toml
src/diffdate/: diffdate.py
