[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffdate"
version = "0.0.6"
authors = [
  { name="Fractale", email="archerstephane@gmail.com" },
]
description = "get the difference in days of two dates"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stephane-archer/diffdateproject"
"Bug Tracker" = "https://github.com/stephane-archer/diffdateproject/issues"

[project.scripts]
diffdate = "diffdate.diffdate:main"
